Refactor and port to NeoForge 1.21.1
This commit ports the mod from Minecraft Forge 1.20.1 to NeoForge for Minecraft 1.21.1. This includes major refactoring across the codebase to adapt to NeoForge's APIs and build system.

Key changes include:
- Updated build scripts (`build.gradle`, `settings.gradle`) to use the NeoForge toolchain and version catalogs.
- Migrated `mods.toml` to the new `neoforge.mods.toml` format.
- Refactored networking to use NeoForge's packet system.
- Adapted data generation (recipes, loot tables, tags, language files) to the new NeoForge data provider structure.
- Replaced many mixins with more targeted ones for NeoForge compatibility.
- Updated tile entity and item classes to use NeoForge's attachment and data component systems for capabilities and NBT data.
- Renamed and restructured numerous classes for better clarity and organization.
- Replaced `forge:composite` with `neoforge:composite` in block model JSON files.
- Removed obsolete classes and files from the old Forge implementation.