@@ -1,26 +1,23 @@
 package io.github.masyumero.emextras.common.tile.factory;
 
-import com.jerry.mekanism_extras.api.ExtraUpgrade;
+import com.jerry.mekextras.api.ExtraUpgrade;
+import com.jerry.mekextras.api.mixin.IMixinMachineEnergyContainer;
+import com.jerry.mekextras.common.util.ExtraUpgradeUtils;
 import fr.iglee42.evolvedmekanism.interfaces.IGetEnergySlot;
-import io.github.masyumero.emextras.common.tier.EMExtraFactoryTier;
-import com.jerry.mekanism_extras.common.util.ExtraUpgradeUtils;
-import com.jerry.mekanism_extras.api.IMixinMachineEnergyContainer;
 import io.github.masyumero.emextras.common.block.attribute.EMExtraAttribute;
 import io.github.masyumero.emextras.common.block.attribute.EMExtraAttributeFactoryType;
 import io.github.masyumero.emextras.common.content.blocktype.EMExtraFactoryType;
 import io.github.masyumero.emextras.common.inventory.slot.EMExtraFactoryInputInventorySlot;
-import io.github.masyumero.emextras.common.registry.EMExtrasBlockType;
-import io.github.masyumero.emextras.common.registry.EMExtrasTileEntityTypes;
-import io.github.masyumero.emextras.common.util.EMExtraEnumUtils;
-import it.unimi.dsi.fastutil.ints.IntArraySet;
-import it.unimi.dsi.fastutil.ints.IntSet;
-import it.unimi.dsi.fastutil.objects.Object2ObjectOpenHashMap;
-import mekanism.api.*;
+import io.github.masyumero.emextras.common.tier.EMExtraFactoryTier;
+import lombok.Getter;
+import mekanism.api.Action;
+import mekanism.api.IContentsListener;
+import mekanism.api.SerializationConstants;
+import mekanism.api.Upgrade;
 import mekanism.api.inventory.IInventorySlot;
-import mekanism.api.math.FloatingLong;
-import mekanism.api.providers.IBlockProvider;
 import mekanism.api.recipes.MekanismRecipe;
 import mekanism.api.recipes.cache.CachedRecipe;
+import mekanism.api.recipes.cache.CachedRecipe.OperationTracker.RecipeError;
 import mekanism.common.CommonWorldTickHandler;
 import mekanism.common.block.attribute.Attribute;
 import mekanism.common.capabilities.energy.MachineEnergyContainer;
@@ -29,26 +26,24 @@ import mekanism.common.capabilities.holder.energy.IEnergyContainerHolder;
 import mekanism.common.capabilities.holder.slot.IInventorySlotHolder;
 import mekanism.common.capabilities.holder.slot.InventorySlotHelper;
 import mekanism.common.integration.computer.ComputerException;
-import mekanism.common.integration.computer.SpecialComputerMethodWrapper;
+import mekanism.common.integration.computer.SpecialComputerMethodWrapper.ComputerIInventorySlotWrapper;
 import mekanism.common.integration.computer.annotation.ComputerMethod;
 import mekanism.common.integration.computer.annotation.WrappingComputerMethod;
 import mekanism.common.integration.computer.computercraft.ComputerConstants;
 import mekanism.common.inventory.container.MekanismContainer;
 import mekanism.common.inventory.container.sync.SyncableBoolean;
-import mekanism.common.inventory.container.sync.SyncableFloatingLong;
 import mekanism.common.inventory.container.sync.SyncableInt;
+import mekanism.common.inventory.container.sync.SyncableLong;
 import mekanism.common.inventory.slot.EnergyInventorySlot;
-import mekanism.common.lib.inventory.HashedItem;
 import mekanism.common.lib.transmitter.TransmissionType;
 import mekanism.common.recipe.lookup.IRecipeLookupHandler;
 import mekanism.common.recipe.lookup.monitor.FactoryRecipeCacheLookupMonitor;
+import mekanism.common.registries.MekanismDataComponents;
 import mekanism.common.tile.component.ITileComponent;
-import mekanism.common.tile.component.TileComponentConfig;
 import mekanism.common.tile.component.TileComponentEjector;
 import mekanism.common.tile.component.config.ConfigInfo;
 import mekanism.common.tile.component.config.DataType;
 import mekanism.common.tile.component.config.slot.InventorySlotInfo;
-import mekanism.common.tile.interfaces.ISustainedData;
 import mekanism.common.tile.prefab.TileEntityConfigurableMachine;
 import mekanism.common.tile.prefab.TileEntityRecipeMachine;
 import mekanism.common.upgrade.IUpgradeData;
@@ -56,26 +51,38 @@ import mekanism.common.upgrade.MachineUpgradeData;
 import mekanism.common.util.MekanismUtils;
 import mekanism.common.util.NBTUtils;
 import mekanism.common.util.UpgradeUtils;
+
+import net.minecraft.SharedConstants;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.Holder;
+import net.minecraft.core.HolderLookup;
+import net.minecraft.core.component.DataComponentMap;
 import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.IntArrayTag;
 import net.minecraft.nbt.Tag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.level.block.entity.BlockEntityType;
+import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
+import net.neoforged.neoforge.common.util.ItemStackMap;
+
+import it.unimi.dsi.fastutil.ints.IntArraySet;
+import it.unimi.dsi.fastutil.ints.IntSet;
+import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
+import java.util.Map.Entry;
 import java.util.function.BooleanSupplier;
-import java.util.function.IntSupplier;
+import java.util.function.ToIntBiFunction;
 
-public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> extends TileEntityConfigurableMachine implements IRecipeLookupHandler<RECIPE>, ISustainedData, IGetEnergySlot {
+public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe<?>> extends TileEntityConfigurableMachine implements IRecipeLookupHandler<RECIPE>, IGetEnergySlot {
 
-    protected static final int BASE_TICKS_REQUIRED = 200;
+    /**
+     * How many ticks it takes, by default, to run an operation.
+     */
+    protected static final int BASE_TICKS_REQUIRED = 10 * SharedConstants.TICKS_PER_SECOND;
 
     protected FactoryRecipeCacheLookupMonitor<RECIPE>[] recipeCacheLookupMonitors;
     protected BooleanSupplier[] recheckAllRecipeErrors;
@@ -84,13 +91,13 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
     protected ProcessInfo[] processInfoSlots;
 
     /**
-     * 一次执行的配方数（并行数），默认为1
+     * 堆叠升级提升的线程数
      */
-    protected int baselineMaxOperations = 1;
+    protected int upgradeMaxOperations = 1;
     /**
      * This Factory's tier.
      */
-    public @Nullable EMExtraFactoryTier tier;
+    public EMExtraFactoryTier tier;
     /**
      * An int[] used to track all current operations' progress.
      */
@@ -98,10 +105,12 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
     /**
      * How many ticks it takes, with upgrades, to run an operation
      */
-    private int ticksRequired = 200;
+    private int ticksRequired = BASE_TICKS_REQUIRED;
+    @Getter
+    private int operationsPerTick = 1;
     private boolean sorting;
     private boolean sortingNeeded = true;
-    private FloatingLong lastUsage = FloatingLong.ZERO;
+    private long lastUsage = 0L;
 
     /**
      * This machine's factory type.
@@ -109,16 +118,17 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
     @NotNull
     protected final EMExtraFactoryType type;
 
+    @Getter
     protected MachineEnergyContainer<TileEntityEMExtraFactory<?>> energyContainer;
     protected final List<IInventorySlot> inputSlots;
     protected final List<IInventorySlot> outputSlots;
-    @WrappingComputerMethod(wrapper = SpecialComputerMethodWrapper.ComputerIInventorySlotWrapper.class, methodNames = "getEnergyItem", docPlaceholder = "energy slot")
+    @Getter
+    @WrappingComputerMethod(wrapper = ComputerIInventorySlotWrapper.class, methodNames = "getEnergyItem", docPlaceholder = "energy slot")
     EnergyInventorySlot energySlot;
 
-    protected TileEntityEMExtraFactory(IBlockProvider blockProvider, BlockPos pos, BlockState state, List<CachedRecipe.OperationTracker.RecipeError> errorTypes, Set<CachedRecipe.OperationTracker.RecipeError> globalErrorTypes) {
+    protected TileEntityEMExtraFactory(Holder<Block> blockProvider, BlockPos pos, BlockState state, List<RecipeError> errorTypes, Set<RecipeError> globalErrorTypes) {
         super(blockProvider, pos, state);
-        type = Objects.requireNonNull(Attribute.get(blockProvider, EMExtraAttributeFactoryType.class)).getFactoryType();
-        configComponent = new TileComponentConfig(this, TransmissionType.ITEM, TransmissionType.ENERGY);
+        type = Attribute.getOrThrow(blockProvider, EMExtraAttributeFactoryType.class).getFactoryType();
         inputSlots = new ArrayList<>();
         outputSlots = new ArrayList<>();
 
@@ -135,7 +145,6 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
             ConfigInfo itemConfig = configComponent.getConfig(TransmissionType.ITEM);
             if (itemConfig != null) {
                 itemConfig.addSlotInfo(DataType.EXTRA, new InventorySlotInfo(true, true, extraSlot));
-                itemConfig.setDataType(DataType.EXTRA, RelativeSide.BOTTOM);
             }
         }
         configComponent.setupInputConfig(TransmissionType.ENERGY, energyContainer);
@@ -147,20 +156,22 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
         activeStates = new boolean[tier.processes];
         recheckAllRecipeErrors = new BooleanSupplier[tier.processes];
         for (int i = 0; i < recheckAllRecipeErrors.length; i++) {
-            //Note: We store one per slot so that we can recheck the different slots at different times to reduce the load on the server
+            // Note: We store one per slot so that we can recheck the different slots at different times to reduce the
+            // load on the server
             recheckAllRecipeErrors[i] = TileEntityRecipeMachine.shouldRecheckAllErrors(this);
         }
         errorTracker = new ErrorTracker(errorTypes, globalErrorTypes, tier.processes);
     }
 
     /**
-     * Used for slots/contents pertaining to the inventory checks to mark sorting as being needed again and recipes as needing to be rechecked. This combines with the
+     * Used for slots/contents pertaining to the inventory checks to mark sorting as being needed again and recipes as
+     * needing to be rechecked. This combines with the
      * passed in listener to allow for abstracting the comparator type checks up to the base level.
      */
     protected IContentsListener markAllMonitorsChanged(IContentsListener listener) {
         return () -> {
             listener.onContentsChanged();
-            //Note: Updating sorting is handled by the onChange calls
+            // Note: Updating sorting is handled by the onChange calls
             for (FactoryRecipeCacheLookupMonitor<RECIPE> cacheLookupMonitor : recipeCacheLookupMonitors) {
                 cacheLookupMonitor.onChange();
             }
@@ -170,7 +181,7 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
     @Override
     protected void presetVariables() {
         super.presetVariables();
-        tier = EMExtraAttribute.getTier(getBlockType(), EMExtraFactoryTier.class);
+        tier = EMExtraAttribute.getEMExtraTier(getBlockHolder(), EMExtraFactoryTier.class);
         Runnable setSortingNeeded = () -> sortingNeeded = true;
         recipeCacheLookupMonitors = new FactoryRecipeCacheLookupMonitor[tier.processes];
         for (int i = 0; i < recipeCacheLookupMonitors.length; i++) {
@@ -181,22 +192,27 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
     @NotNull
     @Override
     protected IEnergyContainerHolder getInitialEnergyContainers(IContentsListener listener) {
-        EnergyContainerHelper builder = EnergyContainerHelper.forSideWithConfig(this::getDirection, this::getConfig);
-        builder.addContainer(energyContainer = MachineEnergyContainer.input(this, listener));
+        EnergyContainerHelper builder = EnergyContainerHelper.forSideWithConfig(this);
+        builder.addContainer(energyContainer = MachineEnergyContainer.input(this, () -> {
+            listener.onContentsChanged();
+            for (FactoryRecipeCacheLookupMonitor<RECIPE> cacheLookupMonitor : recipeCacheLookupMonitors) {
+                cacheLookupMonitor.unpause();
+            }
+        }));
         return builder.build();
     }
 
     @NotNull
     @Override
     protected IInventorySlotHolder getInitialInventory(IContentsListener listener) {
-        InventorySlotHelper builder = InventorySlotHelper.forSideWithConfig(this::getDirection, this::getConfig);
+        InventorySlotHelper builder = InventorySlotHelper.forSideWithConfig(this);
         addSlots(builder, listener, () -> {
             listener.onContentsChanged();
-            //Mark sorting as being needed again
+            // Mark sorting as being needed again
             sortingNeeded = true;
         });
-        //Add the energy slot after adding the other slots so that it has the lowest priority in shift clicking
-        //Note: We can just pass ourselves as the listener instead of the listener that updates sorting as well,
+        // Add the energy slot after adding the other slots so that it has the lowest priority in shift clicking
+        // Note: We can just pass ourselves as the listener instead of the listener that updates sorting as well,
         // as changes to it won't change anything about the sorting of the recipe
         builder.addSlot(energySlot = EnergyInventorySlot.fillOrConvert(energyContainer, this::getLevel, listener, 7, 13));
         return builder.build();
@@ -209,18 +225,18 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
         return null;
     }
 
-    public @NotNull EMExtraFactoryType getFactoryType() {
+    public EMExtraFactoryType getFactoryType() {
         return type;
     }
 
     @Override
-    protected void onUpdateServer() {
-        super.onUpdateServer();
+    protected boolean onUpdateServer() {
+        boolean sendUpdatePacket = super.onUpdateServer();
         energySlot.fillContainerOrConvert();
 
         handleSecondaryFuel();
         if (sortingNeeded && isSorting()) {
-            //If sorting is needed, and we have sorting enabled mark
+            // If sorting is needed, and we have sorting enabled mark
             // sorting as no longer needed and sort the inventory
             sortingNeeded = false;
             // Note: If sorting happens, sorting will be marked as needed once more
@@ -232,23 +248,24 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
             // with other items.
             sortInventory();
         } else if (!sortingNeeded && CommonWorldTickHandler.flushTagAndRecipeCaches) {
-            //Otherwise, if sorting isn't currently needed and the recipe cache is invalid
+            // Otherwise, if sorting isn't currently needed and the recipe cache is invalid
             // Mark sorting as being needed again for the next check as recipes may
             // have changed so our current sort may be incorrect
             sortingNeeded = true;
         }
 
-        //Copy this so that if it changes we still have the original amount. Don't bother making it a constant though as this way
+        // Copy this so that if it changes we still have the original amount. Don't bother making it a constant though
+        // as this way
         // we can then use minusEqual instead of subtract to remove an extra copy call
-        FloatingLong prev = energyContainer.getEnergy().copy();
+        long prev = energyContainer.getEnergy();
         for (int i = 0; i < recipeCacheLookupMonitors.length; i++) {
             if (!recipeCacheLookupMonitors[i].updateAndProcess()) {
-                //If we don't have a recipe in that slot make sure that our active state for that position is false
+                // If we don't have a recipe in that slot make sure that our active state for that position is false
                 activeStates[i] = false;
             }
         }
 
-        //Update the active state based on the current active state of each recipe
+        // Update the active state based on the current active state of each recipe
         boolean isActive = false;
         for (boolean state : activeStates) {
             if (state) {
@@ -257,26 +274,20 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
             }
         }
         setActive(isActive);
-        //If none of the recipes are actively processing don't bother with any subtraction
-        lastUsage = isActive ? prev.minusEqual(energyContainer.getEnergy()) : FloatingLong.ZERO;
-    }
-
-    private static final Logger LOGGER = LogManager.getLogger();
-
-    public void logBlockNBT() {
-        CompoundTag nbtData = this.serializeNBT();
-        LOGGER.info("Block NBT Data: {}", nbtData);
+        // If none of the recipes are actively processing don't bother with any subtraction
+        lastUsage = isActive ? prev - energyContainer.getEnergy() : 0L;
+        return sendUpdatePacket;
     }
 
     /**
-     * Checks if the cached recipe (or recipe for current factory if the cache is out of date) can produce a specific output.
+     * Checks if the cached recipe (or recipe for current factory if the cache is out of date) can produce a specific
+     * output.
      *
      * @param process             Which process the cache recipe is.
      * @param fallbackInput       Used if the cached recipe is null or to validate the cached recipe is not out of date.
      * @param outputSlot          The output slot for this slot.
      * @param secondaryOutputSlot The secondary output slot or null if we only have one output slot
      * @param updateCache         True to make the cached recipe get updated if it is out of date.
-     *
      * @return True if the recipe produces the given output.
      */
     public boolean inputProducesOutput(int process, @NotNull ItemStack fallbackInput, @NotNull IInventorySlot outputSlot, @Nullable IInventorySlot secondaryOutputSlot,
@@ -284,27 +295,29 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
         return outputSlot.isEmpty() || getRecipeForInput(process, fallbackInput, outputSlot, secondaryOutputSlot, updateCache) != null;
     }
 
+    @Contract("null, _ -> false")
     protected abstract boolean isCachedRecipeValid(@Nullable CachedRecipe<RECIPE> cached, @NotNull ItemStack stack);
 
     @Nullable
     protected RECIPE getRecipeForInput(int process, @NotNull ItemStack fallbackInput, @NotNull IInventorySlot outputSlot, @Nullable IInventorySlot secondaryOutputSlot,
                                        boolean updateCache) {
         if (!CommonWorldTickHandler.flushTagAndRecipeCaches) {
-            //If our recipe caches are valid, grab our cached recipe and see if it is still valid
+            // If our recipe caches are valid, grab our cached recipe and see if it is still valid
             CachedRecipe<RECIPE> cached = getCachedRecipe(process);
-            if (cached != null && isCachedRecipeValid(cached, fallbackInput)) {
-                //Our input matches the recipe we have cached for this slot
+            if (isCachedRecipeValid(cached, fallbackInput)) {
+                // Our input matches the recipe we have cached for this slot
                 return cached.getRecipe();
             }
         }
-        //If there is no cached item input, or it doesn't match our fallback then it is an out of date cache, so we ignore the fact that we have a cache
+        // If there is no cached item input, or it doesn't match our fallback then it is an out of date cache, so we
+        // ignore the fact that we have a cache
         RECIPE foundRecipe = findRecipe(process, fallbackInput, outputSlot, secondaryOutputSlot);
         if (foundRecipe == null) {
-            //We could not find any valid recipe for the given item that matches the items in the current output slots
+            // We could not find any valid recipe for the given item that matches the items in the current output slots
             return null;
         }
         if (updateCache) {
-            //If we want to update the cache, then create a new cache with the recipe we found and update the cache
+            // If we want to update the cache, then create a new cache with the recipe we found and update the cache
             recipeCacheLookupMonitors[process].updateCachedRecipe(foundRecipe);
         }
         return foundRecipe;
@@ -318,10 +331,11 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
 
     @Nullable
     private CachedRecipe<RECIPE> getCachedRecipe(int cacheIndex) {
+        // TODO: Sanitize that cacheIndex is in bounds?
         return recipeCacheLookupMonitors[cacheIndex].getCachedRecipe(cacheIndex);
     }
 
-    public BooleanSupplier getWarningCheck(CachedRecipe.OperationTracker.RecipeError error, int processIndex) {
+    public BooleanSupplier getWarningCheck(RecipeError error, int processIndex) {
         return errorTracker.getWarningCheck(error, processIndex);
     }
 
@@ -337,8 +351,9 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
     /**
      * Handles filling the secondary fuel tank based on the item in the extra slot
      */
-    protected void handleSecondaryFuel() {
-    }
+    protected void handleSecondaryFuel() {}
+
+    public abstract boolean isItemValidForSlot(@NotNull ItemStack stack);
 
     /**
      * Like isItemValidForSlot makes no assumptions about current stored types
@@ -368,22 +383,26 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
         return sorting;
     }
 
-    @NotNull
     @ComputerMethod(nameOverride = "getEnergyUsage", methodDescription = ComputerConstants.DESCRIPTION_GET_ENERGY_USAGE)
-    public FloatingLong getLastUsage() {
+    public long getLastUsage() {
         return lastUsage;
     }
 
+    // 高级工厂都能插入创造升级，使用不必判断是否能安装
     @ComputerMethod(methodDescription = "Total number of ticks it takes currently for the recipe to complete")
     public int getTicksRequired() {
-        return upgradeComponent.isUpgradeInstalled(ExtraUpgrade.CREATIVE) ? 0 :ticksRequired;
+        return upgradeComponent.isUpgradeInstalled(ExtraUpgrade.CREATIVE) ? 0 : ticksRequired;
+    }
+
+    public int getChemicalTicksRequired() {
+        return ticksRequired;
     }
 
     @Override
-    public void load(@NotNull CompoundTag nbt) {
-        super.load(nbt);
-        if (nbt.contains(NBTConstants.PROGRESS, Tag.TAG_INT_ARRAY)) {
-            int[] savedProgress = nbt.getIntArray(NBTConstants.PROGRESS);
+    public void loadAdditional(@NotNull CompoundTag nbt, @NotNull HolderLookup.Provider provider) {
+        super.loadAdditional(nbt, provider);
+        if (nbt.contains(SerializationConstants.PROGRESS, Tag.TAG_INT_ARRAY)) {
+            int[] savedProgress = nbt.getIntArray(SerializationConstants.PROGRESS);
             if (tier.processes != savedProgress.length) {
                 Arrays.fill(progress, 0);
             }
@@ -392,36 +411,47 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
             }
         }
     }
+
     @Override
-    public void saveAdditional(@NotNull CompoundTag nbtTags) {
-        super.saveAdditional(nbtTags);
-        nbtTags.put(NBTConstants.PROGRESS, new IntArrayTag(Arrays.copyOf(progress, progress.length)));
+    public void saveAdditional(@NotNull CompoundTag nbtTags, @NotNull HolderLookup.Provider provider) {
+        super.saveAdditional(nbtTags, provider);
+        nbtTags.putIntArray(SerializationConstants.PROGRESS, Arrays.copyOf(progress, progress.length));
     }
 
     @Override
-    public void writeSustainedData(CompoundTag data) {
-        data.putBoolean(NBTConstants.SORTING, isSorting());
+    public void writeSustainedData(HolderLookup.Provider provider, CompoundTag data) {
+        super.writeSustainedData(provider, data);
+        data.putBoolean(SerializationConstants.SORTING, isSorting());
     }
 
     @Override
-    public void readSustainedData(CompoundTag data) {
-        NBTUtils.setBooleanIfPresent(data, NBTConstants.SORTING, value -> sorting = value);
+    public void readSustainedData(HolderLookup.Provider provider, @NotNull CompoundTag data) {
+        super.readSustainedData(provider, data);
+        NBTUtils.setBooleanIfPresent(data, SerializationConstants.SORTING, value -> sorting = value);
     }
 
     @Override
-    public Map<String, String> getTileDataRemap() {
-        Map<String, String> remap = new Object2ObjectOpenHashMap<>();
-        remap.put(NBTConstants.SORTING, NBTConstants.SORTING);
-        return remap;
+    protected void collectImplicitComponents(@NotNull DataComponentMap.Builder builder) {
+        super.collectImplicitComponents(builder);
+        builder.set(MekanismDataComponents.SORTING, isSorting());
+    }
+
+    @Override
+    protected void applyImplicitComponents(@NotNull BlockEntity.DataComponentInput input) {
+        super.applyImplicitComponents(input);
+        sorting = input.getOrDefault(MekanismDataComponents.SORTING, sorting);
     }
 
     @Override
     public void recalculateUpgrades(Upgrade upgrade) {
-        ((IMixinMachineEnergyContainer)getEnergyContainer()).mekanism_Extras$extraRecalculateUpgrades(upgrade);
+        ((IMixinMachineEnergyContainer) getEnergyContainer()).mekanism_Extras$extraRecalculateUpgrades(upgrade);
         if (upgrade == Upgrade.SPEED) {
             ticksRequired = MekanismUtils.getTicks(this, BASE_TICKS_REQUIRED);
+            operationsPerTick = MekanismUtils.getOperationsPerTick(this, BASE_TICKS_REQUIRED, upgradeMaxOperations);
         } else if (upgrade == ExtraUpgrade.STACK) {
-            baselineMaxOperations = (int) Math.pow(2, upgradeComponent.getUpgrades(ExtraUpgrade.STACK));
+            // 实际上一直是整数所以强制转化为int也不会损失什么
+            upgradeMaxOperations = (int) Math.pow(2, upgradeComponent.getUpgrades(ExtraUpgrade.STACK));
+            operationsPerTick = MekanismUtils.getOperationsPerTick(this, BASE_TICKS_REQUIRED, upgradeMaxOperations);
         }
     }
 
@@ -429,44 +459,17 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
     @Override
     public List<Component> getInfo(@NotNull Upgrade upgrade) {
         List<Component> ret = UpgradeUtils.getMultScaledInfo(this, upgrade);
-        return ExtraUpgradeUtils.getMultScaledInfo(ret, this, upgrade);
+        return ExtraUpgradeUtils.getExpScaledInfo(ret, this, upgrade);
     }
 
     @Override
-    public boolean isConfigurationDataCompatible(BlockEntityType<?> tileType) {
-        if (super.isConfigurationDataCompatible(tileType)) {
-            //Check exact match first
-            return true;
-        }
-        //Then check other factory tiers
-        for (EMExtraFactoryTier factoryTier : EMExtraEnumUtils.EMEXTRA_FACTORY_TIERS) {
-            if (factoryTier != tier && EMExtrasTileEntityTypes.getEMExtraFactoryTile(factoryTier, type).get() == tileType) {
-                return true;
-            }
-        }
-
-        //And finally check if it is the non factory version (it will be missing sorting data, but we can gracefully ignore that)
-        return switch (type) {
-            case ADVANCED_ALLOYING -> EMExtrasBlockType.ADVANCED_ALLOYER.getTileType().get();
-            case ALLOYING -> EMExtrasBlockType.ALLOYER.getTileType().get();
-            case SMELTING -> EMExtrasBlockType.ENERGIZED_SMELTER.getTileType().get();
-            case ENRICHING -> EMExtrasBlockType.ENRICHMENT_CHAMBER.getTileType().get();
-            case CRUSHING -> EMExtrasBlockType.CRUSHER.getTileType().get();
-            case COMPRESSING -> EMExtrasBlockType.OSMIUM_COMPRESSOR.getTileType().get();
-            case PURIFYING -> EMExtrasBlockType.PURIFICATION_CHAMBER.getTileType().get();
-            case INJECTING -> EMExtrasBlockType.CHEMICAL_INJECTION_CHAMBER.getTileType().get();
-            case COMBINING -> EMExtrasBlockType.COMBINER.getTileType().get();
-            case INFUSING -> EMExtrasBlockType.METALLURGIC_INFUSER.getTileType().get();
-            case SAWING -> EMExtrasBlockType.PRECISION_SAWMILL.getTileType().get();
-        } == tileType;
+    public boolean isConfigurationDataCompatible(Block blockType) {
+        // Allow exact match or factories of the same type (as we will just ignore the extra data)
+        return super.isConfigurationDataCompatible(blockType) || MekanismUtils.isSameTypeFactory(getBlockHolder(), blockType);
     }
 
     public boolean hasSecondaryResourceBar() {
         return false;
-    }
-
-    public MachineEnergyContainer<TileEntityEMExtraFactory<?>> getEnergyContainer() {
-        return energyContainer;
     }
 
     @Override
@@ -474,41 +477,36 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
         super.addContainerTrackers(container);
         container.trackArray(progress);
         errorTracker.track(container);
-        container.track(SyncableFloatingLong.create(this::getLastUsage, value -> lastUsage = value));
+        container.track(SyncableLong.create(this::getLastUsage, value -> lastUsage = value));
         container.track(SyncableBoolean.create(this::isSorting, value -> sorting = value));
         container.track(SyncableInt.create(this::getTicksRequired, value -> ticksRequired = value));
     }
 
     @Override
-    public void parseUpgradeData(@NotNull IUpgradeData upgradeData) {
+    public void parseUpgradeData(HolderLookup.Provider provider, @NotNull IUpgradeData upgradeData) {
         if (upgradeData instanceof MachineUpgradeData data) {
             redstone = data.redstone;
             setControlType(data.controlType);
             getEnergyContainer().setEnergy(data.energyContainer.getEnergy());
             sorting = data.sorting;
-            energySlot.deserializeNBT(data.energySlot.serializeNBT());
+            energySlot.deserializeNBT(provider, data.energySlot.serializeNBT(provider));
             System.arraycopy(data.progress, 0, progress, 0, data.progress.length);
             for (int i = 0; i < data.inputSlots.size(); i++) {
-                //Copy the stack using NBT so that if it is not actually valid due to a reload we don't crash
-                inputSlots.get(i).deserializeNBT(data.inputSlots.get(i).serializeNBT());
+                // Copy the stack using NBT so that if it is not actually valid due to a reload we don't crash
+                inputSlots.get(i).deserializeNBT(provider, data.inputSlots.get(i).serializeNBT(provider));
             }
             for (int i = 0; i < data.outputSlots.size(); i++) {
                 outputSlots.get(i).setStack(data.outputSlots.get(i).getStack());
             }
             for (ITileComponent component : getComponents()) {
-                component.read(data.components);
+                component.read(data.components, provider);
             }
         } else {
-            super.parseUpgradeData(upgradeData);
+            super.parseUpgradeData(provider, upgradeData);
         }
     }
 
-    @Override
-    public EnergyInventorySlot getEnergySlot() {
-        return this.energySlot;
-    }
-
-    //Methods relating to IComputerTile
+    // Methods relating to IComputerTile
     protected void validateValidProcess(int process) throws ComputerException {
         if (process < 0 || process >= progress.length) {
             throw new ComputerException("Process: '%d' is out of bounds, as this factory only has '%d' processes (zero indexed).", process, progress.length);
@@ -541,10 +539,10 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
         validateValidProcess(process);
         return processInfoSlots[process].outputSlot().getStack();
     }
-    //End methods IComputerTile
+    // End methods IComputerTile
 
     private void sortInventory() {
-        Map<HashedItem, RecipeProcessInfo> processes = new HashMap<>();
+        Map<ItemStack, RecipeProcessInfo<RECIPE>> processes = ItemStackMap.createTypeAndTagMap();
         List<ProcessInfo> emptyProcesses = new ArrayList<>();
         for (ProcessInfo processInfo : processInfoSlots) {
             IInventorySlot inputSlot = processInfo.inputSlot();
@@ -552,124 +550,132 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
                 emptyProcesses.add(processInfo);
             } else {
                 ItemStack inputStack = inputSlot.getStack();
-                HashedItem item = HashedItem.raw(inputStack);
-                RecipeProcessInfo recipeProcessInfo = processes.computeIfAbsent(item, i -> new RecipeProcessInfo());
+                RecipeProcessInfo<RECIPE> recipeProcessInfo = processes.computeIfAbsent(inputStack, i -> new RecipeProcessInfo<>());
                 recipeProcessInfo.processes.add(processInfo);
                 recipeProcessInfo.totalCount += inputStack.getCount();
                 if (recipeProcessInfo.lazyMinPerSlot == null && !CommonWorldTickHandler.flushTagAndRecipeCaches) {
-                    //If we don't have a lazily initialized min per slot calculation set for it yet
+                    // If we don't have a lazily initialized min per slot calculation set for it yet
                     // and our cache is not invalid/out of date due to a reload
                     CachedRecipe<RECIPE> cachedRecipe = getCachedRecipe(processInfo.process());
                     if (isCachedRecipeValid(cachedRecipe, inputStack)) {
+                        recipeProcessInfo.item = inputStack;
+                        recipeProcessInfo.recipe = cachedRecipe.getRecipe();
                         // And our current process has a cached recipe then set the lazily initialized per slot value
                         // Note: If something goes wrong, and we end up with zero as how much we need as an input
                         // we just bump the value up to one to make sure we properly handle it
-                        recipeProcessInfo.lazyMinPerSlot = () -> Math.max(1, getNeededInput(cachedRecipe.getRecipe(), inputStack));
+                        recipeProcessInfo.lazyMinPerSlot = (info, factory) -> factory.getNeededInput(info.recipe, (ItemStack) info.item);
                     }
                 }
             }
         }
         if (processes.isEmpty()) {
-            //If all input slots are empty, just exit
+            // If all input slots are empty, just exit
             return;
         }
-        for (Map.Entry<HashedItem, RecipeProcessInfo> entry : processes.entrySet()) {
-            RecipeProcessInfo recipeProcessInfo = entry.getValue();
+        for (Entry<ItemStack, RecipeProcessInfo<RECIPE>> entry : processes.entrySet()) {
+            RecipeProcessInfo<RECIPE> recipeProcessInfo = entry.getValue();
             if (recipeProcessInfo.lazyMinPerSlot == null) {
-                //If we don't have a lazy initializer for our minPerSlot setup, that means that there is
+                recipeProcessInfo.item = entry.getKey();
+                // If we don't have a lazy initializer for our minPerSlot setup, that means that there is
                 // no valid cached recipe for any of the slots of this type currently, so we want to try and
                 // get the recipe we will have for the first slot, once we end up with more items in the stack
-                recipeProcessInfo.lazyMinPerSlot = () -> {
-                    //Note: We put all of this logic in the lazy init, so that we don't actually call any of this
+                recipeProcessInfo.lazyMinPerSlot = (info, factory) -> {
+                    // Note: We put all of this logic in the lazy init, so that we don't actually call any of this
                     // until it is needed. That way if we have no empty slots and all our input slots are filled
                     // we don't do any extra processing here, and can properly short circuit
-                    HashedItem item = entry.getKey();
-                    ItemStack largerInput = item.createStack(Math.min(item.getMaxStackSize(), recipeProcessInfo.totalCount));
-                    ProcessInfo processInfo = recipeProcessInfo.processes.get(0);
-                    //Try getting a recipe for our input with a larger size, and update the cache if we find one
-                    RECIPE recipe = getRecipeForInput(processInfo.process(), largerInput, processInfo.outputSlot(), processInfo.secondaryOutputSlot(), true);
-                    if (recipe != null) {
-                        return Math.max(1, getNeededInput(recipe, largerInput));
+                    ItemStack item = (ItemStack) info.item;
+                    ItemStack largerInput = item.copyWithCount(Math.min(item.getMaxStackSize(), info.totalCount));
+                    ProcessInfo processInfo = info.processes.getFirst();
+                    // Try getting a recipe for our input with a larger size, and update the cache if we find one
+                    info.recipe = factory.getRecipeForInput(processInfo.process(), largerInput, processInfo.outputSlot(), processInfo.secondaryOutputSlot(), true);
+                    if (info.recipe != null) {
+                        return factory.getNeededInput(info.recipe, largerInput);
                     }
                     return 1;
                 };
             }
         }
         if (!emptyProcesses.isEmpty()) {
-            //If we have any empty slots, we need to factor them in as valid slots for items to transferred to
+            // If we have any empty slots, we need to factor them in as valid slots for items to transferred to
             addEmptySlotsAsTargets(processes, emptyProcesses);
-            //Note: Any remaining empty slots are "ignored" as we don't have any
+            // Note: Any remaining empty slots are "ignored" as we don't have any
             // spare items to distribute to them
         }
-        //Distribute items among the slots
+        // Distribute items among the slots
         distributeItems(processes);
     }
 
-    private void addEmptySlotsAsTargets(Map<HashedItem, RecipeProcessInfo> processes, List<ProcessInfo> emptyProcesses) {
-        for (Map.Entry<HashedItem, RecipeProcessInfo> entry : processes.entrySet()) {
-            RecipeProcessInfo recipeProcessInfo = entry.getValue();
-            int minPerSlot = recipeProcessInfo.getMinPerSlot();
+    private void addEmptySlotsAsTargets(Map<ItemStack, RecipeProcessInfo<RECIPE>> processes, List<ProcessInfo> emptyProcesses) {
+        for (Entry<ItemStack, RecipeProcessInfo<RECIPE>> entry : processes.entrySet()) {
+            RecipeProcessInfo<RECIPE> recipeProcessInfo = entry.getValue();
+            int minPerSlot = recipeProcessInfo.getMinPerSlot(this);
             int maxSlots = recipeProcessInfo.totalCount / minPerSlot;
             if (maxSlots <= 1) {
-                //If we don't have enough to even fill the input for a slot for a single recipe; skip
+                // If we don't have enough to even fill the input for a slot for a single recipe; skip
                 continue;
             }
-            //Otherwise, if we have at least enough items for two slots see how many we already have with items in them
+            // Otherwise, if we have at least enough items for two slots see how many we already have with items in them
             int processCount = recipeProcessInfo.processes.size();
             if (maxSlots <= processCount) {
-                //If we don't have enough extra to fill another slot skip
+                // If we don't have enough extra to fill another slot skip
                 continue;
             }
-            //Note: This is some arbitrary input stack one of the stacks contained
-            ItemStack sourceStack = entry.getKey().getInternalStack();
+            // Note: This is some arbitrary input stack one of the stacks contained
+            ItemStack sourceStack = entry.getKey();
             int emptyToAdd = maxSlots - processCount;
             int added = 0;
             List<ProcessInfo> toRemove = new ArrayList<>();
             for (ProcessInfo emptyProcess : emptyProcesses) {
                 if (inputProducesOutput(emptyProcess.process(), sourceStack, emptyProcess.outputSlot(), emptyProcess.secondaryOutputSlot(), true)) {
-                    //If the input is valid for the stuff in the empty process' output slot
+                    // If the input is valid for the stuff in the empty process' output slot
                     // then add our empty process to our recipeProcessInfo, and mark
                     // the empty process as accounted for
                     recipeProcessInfo.processes.add(emptyProcess);
                     toRemove.add(emptyProcess);
                     added++;
                     if (added >= emptyToAdd) {
-                        //If we added as many as we could based on how much input we have; exit
+                        // If we added as many as we could based on how much input we have; exit
                         break;
                     }
                 }
             }
             emptyProcesses.removeAll(toRemove);
             if (emptyProcesses.isEmpty()) {
-                //We accounted for all our empty processes, stop looking at inputs
+                // We accounted for all our empty processes, stop looking at inputs
                 // for purposes of distributing empty slots among them
                 break;
             }
         }
     }
 
-    private void distributeItems(Map<HashedItem, RecipeProcessInfo> processes) {
-        for (Map.Entry<HashedItem, RecipeProcessInfo> entry : processes.entrySet()) {
-            RecipeProcessInfo recipeProcessInfo = entry.getValue();
+    private void distributeItems(Map<ItemStack, RecipeProcessInfo<RECIPE>> processes) {
+        for (Entry<ItemStack, RecipeProcessInfo<RECIPE>> entry : processes.entrySet()) {
+            RecipeProcessInfo<RECIPE> recipeProcessInfo = entry.getValue();
             int processCount = recipeProcessInfo.processes.size();
             if (processCount == 1) {
-                //If there is only one process with the item in it; short-circuit, no balancing is needed
+                // If there is only one process with the item in it; short-circuit, no balancing is needed
                 continue;
             }
-            HashedItem item = entry.getKey();
-            //Note: This isn't based on any limits the slot may have (but we currently don't have any reduced ones here, so it doesn't matter)
-            int maxStackSize = item.getMaxStackSize();
+            ItemStack item = entry.getKey();
+            // Note: This isn't based on any limits the slot may have (but we currently don't have any reduced ones
+            // here, so it doesn't matter)
+            int maxStackSize = switch (tier) {
+                case ABSOLUTE_OVERCLOCKED -> item.getMaxStackSize() * 8;
+                case SUPREME_QUANTUM -> item.getMaxStackSize() * 16;
+                case COSMIC_DENSE -> item.getMaxStackSize() * 32;
+                case INFINITE_MULTIVERSAL -> item.getMaxStackSize() * 64;
+            };
             int numberPerSlot = recipeProcessInfo.totalCount / processCount;
             if (numberPerSlot == maxStackSize) {
-                //If all the slots are already maxed out; short-circuit, no balancing is needed
+                // If all the slots are already maxed out; short-circuit, no balancing is needed
                 continue;
             }
             int remainder = recipeProcessInfo.totalCount % processCount;
-            int minPerSlot = recipeProcessInfo.getMinPerSlot();
+            int minPerSlot = recipeProcessInfo.getMinPerSlot(this);
             if (minPerSlot > 1) {
                 int perSlotRemainder = numberPerSlot % minPerSlot;
                 if (perSlotRemainder > 0) {
-                    //Reduce the number we distribute per slot by what our excess
+                    // Reduce the number we distribute per slot by what our excess
                     // is if we are trying to balance it by the size of the input
                     // required by the recipe
                     numberPerSlot -= perSlotRemainder;
@@ -683,7 +689,7 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
                     // slot while we still have a remainder, will make sure
                 }
                 if (numberPerSlot + minPerSlot > maxStackSize) {
-                    //If adding how much we want per slot would cause the slot to overflow
+                    // If adding how much we want per slot would cause the slot to overflow
                     // we reduce how much we set per slot to how much there is room for
                     // Note: we can do this safely because while our remainder may be
                     // processCount * minPerSlot - 1 (as shown above), if we are in
@@ -701,43 +707,48 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
                 EMExtraFactoryInputInventorySlot inputSlot = processInfo.inputSlot();
                 int sizeForSlot = numberPerSlot;
                 if (remainder > 0) {
-                    //If we have a remainder, factor it into our slots
+                    // If we have a remainder, factor it into our slots
                     if (remainder > minPerSlot) {
-                        //If our remainder is greater than how much we need to fill out the min amount for the slot based
-                        // on the recipe then, to keep it distributed as evenly as possible, increase our size for the slot
+                        // If our remainder is greater than how much we need to fill out the min amount for the slot
+                        // based
+                        // on the recipe then, to keep it distributed as evenly as possible, increase our size for the
+                        // slot
                         // by how much we need, and decrease our remainder by that amount
                         sizeForSlot += minPerSlot;
                         remainder -= minPerSlot;
                     } else {
-                        //Otherwise, add our entire remainder to the size for slot, and mark our remainder as fully used
+                        // Otherwise, add our entire remainder to the size for slot, and mark our remainder as fully
+                        // used
                         sizeForSlot += remainder;
                         remainder = 0;
                     }
                 }
                 if (inputSlot.isEmpty()) {
-                    //Note: sizeForSlot should never be zero here as we would not have added
+                    // Note: sizeForSlot should never be zero here as we would not have added
                     // the empty slot to this item's distribution grouping if it would not
                     // end up getting any items; check it just in case though before creating
                     // a stack for the slot and setting it
                     if (sizeForSlot > 0) {
-                        //Note: We use setStackUnchecked here, as there is a very small chance that
+                        // Note: We use setStackUnchecked here, as there is a very small chance that
                         // the stack is not actually valid for the slot because of a reload causing
                         // recipes to change. If this is the case, then we want to properly not crash,
                         // but we would rather not add any extra overhead about revalidating the item
                         // each time as it can get somewhat expensive.
-                        inputSlot.setStackUnchecked(item.createStack(sizeForSlot));
+                        inputSlot.setStackUnchecked(item.copyWithCount(sizeForSlot));
                     }
                 } else {
-                    //Slot is not currently empty
+                    // Slot is not currently empty
                     if (sizeForSlot == 0) {
-                        //If the amount of the item we want to set it to is zero (all got used by earlier stacks, which might
-                        // happen if the recipe requires a stacked input (minPerSlot > 1)), then we need to set the slot to empty
+                        // If the amount of the item we want to set it to is zero (all got used by earlier stacks, which
+                        // might
+                        // happen if the recipe requires a stacked input (minPerSlot > 1)), then we need to set the slot
+                        // to empty
                         inputSlot.setEmpty();
                     } else if (inputSlot.getCount() != sizeForSlot) {
-                        //Otherwise, if our slot doesn't already contain the amount we want it to,
+                        // Otherwise, if our slot doesn't already contain the amount we want it to,
                         // we need to adjust how much is stored in it, and log an error if it changed
                         // by a different amount then we expected
-                        //Note: We use setStackSize here rather than setStack to avoid an unnecessary stack copy call
+                        // Note: We use setStackSize here rather than setStack to avoid an unnecessary stack copy call
                         // as copying item stacks can sometimes be rather expensive in a heavily modded environment
                         MekanismUtils.logMismatchedStackSize(sizeForSlot, inputSlot.setStackSize(sizeForSlot, Action.EXECUTE));
                     }
@@ -746,22 +757,24 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
         }
     }
 
-    public record ProcessInfo(int process, @NotNull EMExtraFactoryInputInventorySlot inputSlot, @NotNull IInventorySlot outputSlot,
-                              @Nullable IInventorySlot secondaryOutputSlot) {
-    }
+    public record ProcessInfo(int process, @NotNull EMExtraFactoryInputInventorySlot inputSlot,
+                              @NotNull IInventorySlot outputSlot,
+                              @Nullable IInventorySlot secondaryOutputSlot) {}
 
-    private static class RecipeProcessInfo {
+    private static class RecipeProcessInfo<RECIPE extends MekanismRecipe<?>> {
 
         private final List<ProcessInfo> processes = new ArrayList<>();
         @Nullable
-        private IntSupplier lazyMinPerSlot;
+        private ToIntBiFunction<RecipeProcessInfo<RECIPE>, TileEntityEMExtraFactory<RECIPE>> lazyMinPerSlot;
+        private Object item;
+        private RECIPE recipe;
         private int minPerSlot = 1;
         private int totalCount;
 
-        public int getMinPerSlot() {
+        public int getMinPerSlot(TileEntityEMExtraFactory<RECIPE> factory) {
             if (lazyMinPerSlot != null) {
-                //Get the value lazily
-                minPerSlot = lazyMinPerSlot.getAsInt();
+                // Get the value lazily
+                minPerSlot = Math.max(1, lazyMinPerSlot.applyAsInt(this, factory));
                 lazyMinPerSlot = null;
             }
             return minPerSlot;
@@ -770,18 +783,19 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
 
     protected static class ErrorTracker {
 
-        private final List<CachedRecipe.OperationTracker.RecipeError> errorTypes;
+        private final List<RecipeError> errorTypes;
         private final IntSet globalTypes;
 
+        // TODO: See if we can get it so we only have to sync a single version of global types?
         private final boolean[][] trackedErrors;
         private final int processes;
 
-        public ErrorTracker(List<CachedRecipe.OperationTracker.RecipeError> errorTypes, Set<CachedRecipe.OperationTracker.RecipeError> globalErrorTypes, int processes) {
-            //Copy the list if it is mutable to ensure it doesn't get changed, otherwise just use the list
+        public ErrorTracker(List<RecipeError> errorTypes, Set<RecipeError> globalErrorTypes, int processes) {
+            // Copy the list if it is mutable to ensure it doesn't get changed, otherwise just use the list
             this.errorTypes = List.copyOf(errorTypes);
             globalTypes = new IntArraySet(globalErrorTypes.size());
             for (int i = 0; i < this.errorTypes.size(); i++) {
-                CachedRecipe.OperationTracker.RecipeError error = this.errorTypes.get(i);
+                RecipeError error = this.errorTypes.get(i);
                 if (globalErrorTypes.contains(error)) {
                     globalTypes.add(i);
                 }
@@ -798,26 +812,32 @@ public abstract class TileEntityEMExtraFactory<RECIPE extends MekanismRecipe> ex
             container.trackArray(trackedErrors);
         }
 
-        public void onErrorsChanged(Set<CachedRecipe.OperationTracker.RecipeError> errors, int processIndex) {
+        public void onErrorsChanged(Set<RecipeError> errors, int processIndex) {
             boolean[] processTrackedErrors = trackedErrors[processIndex];
             for (int i = 0; i < processTrackedErrors.length; i++) {
                 processTrackedErrors[i] = errors.contains(errorTypes.get(i));
             }
         }
 
-        private BooleanSupplier getWarningCheck(CachedRecipe.OperationTracker.RecipeError error, int processIndex) {
+        private BooleanSupplier getWarningCheck(RecipeError error, int processIndex) {
             if (processIndex >= 0 && processIndex < processes) {
                 int errorIndex = errorTypes.indexOf(error);
                 if (errorIndex >= 0) {
                     if (globalTypes.contains(errorIndex)) {
-                        return () -> Arrays.stream(trackedErrors).anyMatch(processTrackedErrors -> processTrackedErrors[errorIndex]);
+                        return () -> {
+                            for (boolean[] tracked : trackedErrors) {
+                                if (tracked[errorIndex]) {
+                                    return true;
+                                }
+                            }
+                            return false;
+                        };
                     }
                     return () -> trackedErrors[processIndex][errorIndex];
                 }
             }
-            //Something went wrong
+            // Something went wrong
             return () -> false;
         }
     }
 }
-
